user-service.yaml
# User Service Service
apiVersion: v1
kind: Service
metadata:
  name: user-service
  namespace: blog
spec:
  selector:
    app: user-service
  ports:
  - port: 8081
    targetPort: 8081
  type: ClusterIP
